sovereigntyai-temp/services/llm/k8s/llm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm
  namespace: sovereignty-ai-dev
spec:
  selector:
    matchLabels:
      name: llm
  template:
    metadata:
      labels:
        name: llm
    spec:
      containers:
      - name: llm
        #image: image-registry.openshift-image-registry.svc:5000/sovereignty-ai-dev/ollama-image:latest
        image: ollama/ollama:0.4.7
        ports:
        - name: http
          containerPort: 11434
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /.ollama
          name: persistent-volume
          subPath: data/llm_data/ollama
      - name: open-webui
        image: dyrnq/open-webui@sha256:de5d58daf875e0df88fbfe3ee5f672a1dc482d9e394f19578ca097fffccc19f8
#        image: dyrnq/open-webui:git-fe19f12
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /app/backend/data
            name: persistent-volume
            subPath: data/llm_data/open_webui
      volumes:
      - name: persistent-volume
        persistentVolumeClaim:
          claimName: persistent-volume-claim
  strategy:
    type: Recreate
