sovereigntyai-temp/services/llm/k8s/llm-open-webui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: sovereignty-ai-dev
spec:
  selector:
    name: llm
  ports:
    - name: webui-port
      port: 3000
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
