sovereigntyai-temp/services/llm/k8s/llm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-service
  namespace: sovereignty-ai-dev
spec:
  selector:
    name: llm
  ports:
    - name: llm-port
      port: 11434
      targetPort: 11434
      protocol: TCP
  type: ClusterIP
