sovereigntyai-temp/services/llm/k8s/llm-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: open-webui-route
  namespace: sovereignty-ai-dev
spec:
  to:
    kind: Service
    name: open-webui-service
  port:
    targetPort: 8080
  wildcardPolicy: None
